--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
     <script src="js/script.js"></script>
 </head>
 <body>
+<h1>Sign Up</h1>
+<form>
+    <input type="text" placeholder="username" name="username">
+    <p>Username must be and contain 5 - 12 characters</p>
+    <input type="email" name="email" placeholder="email">
+    <p>Email must be a valid address, e.g. me@mydomain.com</p>
+    <input type="password" name="password" placeholder="password">
+    <button id="show_hide_password_btn">Show</button>
+    <p>Password must alphanumeric (@, _ and - are also allowed) and be 8 - 20 characters</p>
+    <input type="text" name="telephone" placeholder="telephone">
+    <p>Telephone must be a valid PK telephone number<br>(12 digits <923xzyyyyyyy>)</p>
+    <input type="text" name="slug" placeholder="profile slug">
+    <p>Slug must contain only lowercase letters, numbers and hyphens and be 8 - 20 characters</p>
+    <button type="submit">SUBMIT</button>
+</form>
 
 </body>
 </html>
