added "msg" class on all the p tags to appear message on invalid state of the form

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <h1>Sign Up</h1>
 <form>
     <input type="text" placeholder="username" name="username">
-    <p>Username must be and contain 5 - 12 characters</p>
+    <p class="msg">Username must be and contain 5 - 12 characters</p>
     <input type="email" name="email" placeholder="email">
-    <p>Email must be a valid address, e.g. me@mydomain.com</p>
+    <p class="msg">Email must be a valid address, e.g. me@mydomain.com</p>
     <input type="password" name="password" placeholder="password">
     <button id="show_hide_password_btn">Show</button>
-    <p>Password must alphanumeric (@, _ and - are also allowed) and be 8 - 20 characters</p>
+    <p class="msg">Password must alphanumeric (@, _ and - are also allowed) and be 8 - 20 characters</p>
     <input type="text" name="telephone" placeholder="telephone">
-    <p>Telephone must be a valid PK telephone number<br>(12 digits <923xzyyyyyyy>)</p>
+    <p class="msg">Telephone must be a valid PK telephone number<br>(12 digits <923xzyyyyyyy>)</p>
     <input type="text" name="slug" placeholder="profile slug">
-    <p>Slug must contain only lowercase letters, numbers and hyphens and be 8 - 20 characters</p>
+    <p class="msg">Slug must contain only lowercase letters, numbers and hyphens and be 8 - 20 characters</p>
     <button type="submit">SUBMIT</button>
 </form>
 
